--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Adobe Fonts (Typekit) -->
     <link rel="stylesheet" href="https://use.typekit.net/kbv3wdg.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Liam Brophy</title>
+    <title>Liam Allaire</title>
     <style>
       /* Ensure fonts are loaded with proper settings */
       @import url("https://use.typekit.net/kbv3wdg.css");
