Add social preview and favicon variants; add Open Graph / Twitter meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <link id="dynamic-favicon" rel="icon" type="image/jpeg" href="/favicons/NewFavicons.jpg" />
+    <link rel="icon" href="/favicons/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="/favicons/favicon-512.png" sizes="512x512" />
+    <link rel="apple-touch-icon" href="/favicons/apple-touch-icon.png" />
+
+    <!-- Social preview / Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Liam — Designer & Developer" />
+    <meta property="og:description" content="Designer working in publishing, development, and creative technology." />
+    <meta property="og:image" content="https://liam.site/social-preview.png" />
+    <meta property="og:url" content="https://liam.site/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Liam — Designer & Developer" />
+    <meta name="twitter:description" content="Designer working in publishing, development, and creative technology." />
+    <meta name="twitter:image" content="https://liam.site/social-preview.png" />
+
     <!-- Adobe Fonts (Typekit) -->
     <link rel="stylesheet" href="https://use.typekit.net/kbv3wdg.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
