Update social meta: title to 'Liam Allaire' and use provided social-preview.jpg

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
     <!-- Social preview / Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Liam — Designer & Developer" />
+    <meta property="og:title" content="Liam Allaire" />
     <meta property="og:description" content="Designer working in publishing, development, and creative technology." />
-    <meta property="og:image" content="https://liam.site/social-preview.png" />
+    <meta property="og:image" content="https://liam.site/social-preview.jpg" />
     <meta property="og:url" content="https://liam.site/" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Liam — Designer & Developer" />
+    <meta name="twitter:title" content="Liam Allaire" />
     <meta name="twitter:description" content="Designer working in publishing, development, and creative technology." />
-    <meta name="twitter:image" content="https://liam.site/social-preview.png" />
+    <meta name="twitter:image" content="https://liam.site/social-preview.jpg" />
 
     <!-- Adobe Fonts (Typekit) -->
     <link rel="stylesheet" href="https://use.typekit.net/kbv3wdg.css">
